# ewan-kb-server

./: .gitignore  Dockerfile  LICENSE  README.md  REQUIREMENTS.md  config.example.toml  kbs.example.json  pyproject.toml
ewankb_server/: __init__.py  config.py  context.py  server.py
tests/: test_mall_server_e2e.py
